--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -1,11 +1,13 @@
-.sidebar__tweet {
+.sidebar_chatter {
   background-color: var(--campus-color) !important;
   border: none !important;
-  color: white !important;
+  color: black !important;
   font-weight: 700 !important;
+  font-size: 18px !important;
   text-transform: inherit !important;
   border-radius: 20px !important;
-  height: 50px !important;
+  height: 80px !important;
+  width: 250px !important;
   margin-top: 20px !important;
 }
 
@@ -18,9 +20,11 @@
   padding-right: 20px;
 }
 
-.sidebar__campusIcon {
+.sidebar_campusIcon {
   color: var(--campus-color);
-  font-size: 30px !important;
+  height: 15px !important;
+  width: 15px !important;
+  font-size: 15px !important;
   margin-left: 20px;
   margin-bottom: 20px;
 }
