--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -12,18 +12,18 @@
 }
 
 .sidebar {
-  border-right: 1px solid var(--campus-color);
   flex: 0.25;
   min-width: 250px;
   padding-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
+  color: black;
 }
 
 .sidebar_campusIcon {
   color: var(--campus-color);
-  height: 15px !important;
-  width: 15px !important;
+  height: 60px !important;
+  width: 60px !important;
   font-size: 15px !important;
   margin-left: 20px;
   margin-bottom: 20px;
