--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,13 @@ body {
 .app {
   display: flex;
   height: 100vh;
-  max-width: 1600px;
+  max-width: 1800px;
+  margin-left: 500px;
+  padding-right: 50px;
+  padding-top: 25px;
+}
+
+.subpage {
+  display: flex;
+  height: 100vh;
 }
